--- a/day08/demo01.html
+++ b/day08/demo01.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>background 相关的属性理解</title>
+    <style>
+        .test {
+            /*background: red url(./../bg.png) no-repeat top;
+            background: red url(./../bg.png) no-repeat top center;
+            background: red url(./../bg.png) no-repeat center top;*/
+            background: red url(./../bg.png) no-repeat;
+            border: 10px dashed black;
+            width: 240px;
+            height: 200px;
+            padding: 10px;
+            /*background-size:100%;//以元素为基准*/
+        }
+    </style>
 </head>
+
 <body>
-    
+
+    <div class='test'>
+        background-size
+    </div>
+
 </body>
+
 </html>
