--- a/day07/demo01.html
+++ b/day07/demo01.html
@@ -10,7 +10,7 @@
     <div>
         loading
     </div>
-    <script data-main='main.js' src='./../require.js'>
+    <script data-main='main' src='./../require.js'>
     </script>
 
 
