--- a/day15/demo.html
+++ b/day15/demo.html
@@ -10,6 +10,11 @@
     <div>
         sssssssssssss
     </div>
+    <svg width="90" height="13" viewBox="0 0 89.4 12.4">
+        <line x1="0" y1="6.2" x2="59.6" y2="6.2"></line>
+        <line x1="54.7" y1="0.7" x2="60.5" y2="6.5"></line>
+        <line x1="54.7" y1="11.7" x2="60.5" y2="5.8"></line>
+    </svg>
     <script>
         // var reg = /D|G/g;
         // var s = 'abcDefGGfeDcba';
