--- a/svg/demo02.html
+++ b/svg/demo02.html
@@ -106,10 +106,9 @@ M 60, 60 L 90 60 L 60, 42.68" />
 
 </g>
 </svg>
-<svg width="400px" height="300px" viewBox="0 0 400 300"
->
-<!-- gray drop shadow -->
-<ellipse cx="154" cy="154" rx="150" ry="120" style="fill: #999999;"/>
+<svg width="400px" height="300px" viewBox="0 0 400 300">
+    <!-- gray drop shadow -->
+    <ellipse cx="154" cy="154" rx="150" ry="120" style="fill: #999999;"/>
 <!-- light blue ellipse -->
 <ellipse cx="152" cy="152" rx="150" ry="120" style="fill: #cceeff;"/>
 <!-- large light red semicircle fills upper half,
